@@ -12,10 +12,7 @@ my $tb = Test::Builder2->default;
 # ok() starts the stream automatically
 {
     $tb->ok(1);
-
-    my $history = $tb->history;
-    my $start = grep { $_->event_type eq 'test_start' } @{$history->events};
-    $tb->ok( $start, "ok issued a test_start" );
+    $tb->ok( $tb->history->in_test, "ok issued a test_start" );
 }
 
 $tb->set_plan( no_plan => 1 );
