@@ -1,20 +1,12 @@
 #!/usr/bin/perl -w
 
-BEGIN {
-    if( $ENV{PERL_CORE} ) {
-        chdir 't';
-        @INC = ('../lib', 'lib');
-    }
-    else {
-        unshift @INC, 't/lib';
-    }
-}
-
 # There was a bug with like() involving a qr// not failing properly.
 # This tests against that.
 
 use strict;
+use warnings;
 
+use lib 't/lib';
 
 # Can't use Test.pm, that's a 5.005 thing.
 package My::Test;
@@ -74,5 +66,5 @@ OUT
 
 END {
     # Test::More thinks it failed.  Override that.
-    exit(scalar grep { !$_ } $TB->summary);
+    exit $TB->history->test_was_successful ? 0 : 1;
 }
