@@ -9,6 +9,13 @@ See README and version control log for Test::Builder2 changes.
     * Update the resources meta data to point at the correct repository, issues
       mailing list and home page.
 
+    Incompatible Changes
+    * The result of each test is no longer stored by default.  This keeps
+      the test framework from consuming more and more memory as tests are
+      run.  Test::Builder->details and Test::Builder->summary will throw
+      exceptions by default.  For most needs, they are replaced with
+      statistical methods in TB2::History. [github 198]
+
 
 1.005000_005  Thu Apr 26 15:23:25 PDT 2012
     New Features
